# randomized-linear-algebra

./: .gitignore  BUILD.md  CMakeLists.txt  INSTALL.md  README.md  build.sh  plot_benchmark.py
benchmark/: benchmark.cpp  benchmark_fixed_precision.cpp  benchmark_fixed_precision_A.cpp  benchmark_fixed_rank.cpp  benchmark_fixed_rank_A.cpp
include/: RandomizedLinearAlgebra.hpp  RandomizedLinearAlgebra_impl.hpp  StochasticLA.hpp  StochasticLA_impl.hpp  TestMatrices.hpp  TestMatrices_impl.hpp
include/randla/: aliases.hpp  randla.hpp  types.hpp
include/randla/algorithms/: adaptive_rand_range_finder.hpp  error_estimators.hpp  matrix_factorizer.hpp  matrix_factorizer_impl.hpp  rand_range_finder.hpp  randomized_linear_algebra.hpp  randomized_linear_algebra_impl.hpp  randomized_range_finder.hpp  randomized_range_finder_impl.hpp
include/randla/metrics/: error_estimators.hpp  error_estimators_impl.hpp
include/randla/random/: random_generator.hpp
include/randla/threading/: threading.hpp
include/randla/utils/: matrix_generators.hpp  matrix_generators_impl.hpp  test_matrices.hpp  test_matrices_impl.hpp
tests/: load_matrix_market.hpp  test_adaptive_algorithms.cpp  test_basic.cpp  test_fixed_precision.cpp  test_fixed_rank.cpp  test_matrices.cpp  test_matrix_factorizer.cpp  test_matrix_factorizer_google.cpp  test_spectral_norm.cpp  test_spectrum_comparison.cpp  test_srft.cpp
